<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvPreviousInput"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="bottom|end"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        tools:text="20125"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="end|bottom"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="42dp"
        tools:text="12508808" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/clearBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:onClick="onClear"
            android:padding="0dp"
            android:text="@string/c"
            android:textSize="18sp"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

        <Button
            android:id="@+id/percentageBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:onClick="onOperator"
            android:text="@string/Percentage"
            android:textSize="18sp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/allClearBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:onClick="onAllClear"
            android:text="@string/ac"
            android:textSize="18sp"
            tools:ignore="UsingOnClickInXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:background="@color/secondary"
            android:textColor="@color/primary"
            android:id="@+id/divideBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/divide"
            android:textSize="24sp"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/sevenBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:onClick="onDigit"
            android:padding="0dp"
            android:text="@string/_7"
            android:textSize="18sp"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

        <Button
            android:id="@+id/eightBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:onClick="onDigit"
            android:text="@string/_8"
            android:textSize="18sp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/nineBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:onClick="onDigit"
            android:text="@string/_9"
            android:textSize="18sp"
            tools:ignore="UsingOnClickInXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:background="@color/secondary"
            android:textColor="@color/primary"
            android:id="@+id/multiplyBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/multiple"
            android:textSize="24sp"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/fourBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:onClick="onDigit"
            android:padding="0dp"
            android:text="@string/_4"
            android:textSize="18sp"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

        <Button
            android:id="@+id/fiveBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:onClick="onDigit"
            android:text="@string/_5"
            android:textSize="18sp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/sixBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:onClick="onDigit"
            android:text="@string/_6"
            android:textSize="18sp"
            tools:ignore="UsingOnClickInXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:background="@color/secondary"
            android:textColor="@color/primary"
            android:id="@+id/minusBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/minus"
            android:textSize="24sp"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/oneBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:onClick="onDigit"
            android:padding="0dp"
            android:text="@string/_1"
            android:textSize="18sp"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

        <Button
            android:id="@+id/twoBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:onClick="onDigit"
            android:text="@string/_2"
            android:textSize="18sp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/threeBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:onClick="onDigit"
            android:text="@string/_3"
            android:textSize="18sp"
            tools:ignore="UsingOnClickInXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:background="@color/secondary"
            android:textColor="@color/primary"
            android:id="@+id/plusBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperator"
            android:text="@string/plus"
            android:textSize="24sp"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/zeroBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="2"
            android:background="@color/black"
            android:onClick="onDigit"
            android:padding="0dp"
            android:text="@string/_0"
            android:textSize="18sp"
            tools:ignore="NestedWeights,UsingOnClickInXml" />


        <Button
            android:id="@+id/dotBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/black"
            android:onClick="onDecimalPoint"
            android:text="@string/dot"
            android:textSize="18sp"
            tools:ignore="UsingOnClickInXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/equalBtn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/secondary"
            android:onClick="onEqual"
            android:text="@string/equal"
            android:textColor="@color/primary"
            android:textSize="24sp"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>


</LinearLayout>